--- a/peer/entity/templates/entity/menu.html
+++ b/peer/entity/templates/entity/menu.html
@@ -6,7 +6,7 @@
       <li><a href="{% url 'entities:edit_metadata' entity.id %}">{% trans "Edit metadata" %}</a></li>
       {% if MODERATION_ENABLED and entity.state != "published"%}
             {% canapprove entity %}
-            {% if not entity.check_complete %}
+            {% if entity.state == entity.STATE.MOD %}
       <li><a href="{% url 'entities:edit_metadata' entity.id %}">{% trans "Approve/Reject metadata changes" %}</a></li>
             {% endif %}
             {% endcanapprove %}
