--- a/peer/entity/templates/entity/manage_idp_categories.html
+++ b/peer/entity/templates/entity/manage_idp_categories.html
@@ -18,7 +18,7 @@
       {{ form.as_p }}
       </fieldset>
       <fieldset class="actionRow">
-          <input class="button" type="submit" value="{% if MODERATION_ENABLED %}{% trans "Submit changes for moderation" %}{% else %}{% trans "Save changes" %}{% endif %}" />
+          <input class="button" type="submit" value="{% trans "Save changes" %}" />
         {% trans "or" %} <a class="button" href="{% url 'entities:entity_view' entity.id %}">{% trans "Cancel" %}</a>
       </fieldset>
 
@@ -33,11 +33,11 @@
               $('#id_coc_priv_statement_url').parent().css('margin-left', '20px');
               $('#id_lang_priv_statement_url').parent().css('margin-left', '20px');
               $('#id_security_contact_email').parent().css('margin-left', '20px');
-              if ($('#id_coc_priv_statement_url').val() === '') {
+              if ($('#id_coc_priv_statement_url').val() === '' && $('#id_code_of_conduct').val() === false) {
                   $('#id_coc_priv_statement_url').parent().css('margin-left', '20px').hide();
                   $('#id_lang_priv_statement_url').parent().css('margin-left', '20px').hide();
               }
-              if ($('#id_security_contact_email').val() === '') {
+              if ($('#id_security_contact_email').val() === '' && $('#id_sirtfi_id_assurance').val() === false) {
                   $('#id_security_contact_email').parent().css('margin-left', '20px').hide();
               }
               $('#id_code_of_conduct').click(function (e) {
@@ -51,4 +51,3 @@
       }(jQuery));
 </script>
 {% endblock %}
-
