fix bug commiting changes

--- a/peer/entity/templates/entity/simple_edit_metadata.html
+++ b/peer/entity/templates/entity/simple_edit_metadata.html
@@ -50,7 +50,7 @@
             {% endif %}
       {% else %}
             {% canedit entity %}
-    <input class="button" type="submit" value="Submit changes" />
+    <input class="button" name="approve_changes" type="submit" value="Publish changes" />
             {% endcanedit %}
       {% endif %}
     <input type="hidden" name="button_clicked" value="">
